# clifra

./: .gitignore  404.html  CITATION.cff  LICENSE  NOTICE  README.md  __init__.py  index.html  log.py  main.py  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_performance.yml  config.yml  feature_task.yml  theory_question.yml
.github/workflows/: docs.yml  tests.yml
Architecture/: index.html
api/core/: index.html
api/functional/: index.html
api/layers/: index.html
api/optimizers/: index.html
benchmarks/: __init__.py  benchmark_core.py  benchmark_framework_pipeline.py  benchmark_mkdocs.py  config.json  run.py
benchmarks/suite/: __init__.py  artifacts.py  cases.py  config.py  metrics.py  models.py  runner.py
clifra/: __init__.py
clifra/analysis/: __init__.py  _types.py  commutator.py  dimension.py  geodesic.py  pipeline.py  sampler.py  signature.py  spectral.py  symmetry.py
clifra/core/: __init__.py  config.py  formatting.py  legacy.py  storage.py  visualizer.py
clifra/criterion/: __init__.py  loss.py  orthogonality.py
clifra/functional/: __init__.py  activation.py  loss.py  orthogonality.py  products.py
clifra/layers/: __init__.py
clifra/optimizers/: __init__.py  riemannian.py
clifra/utils/: __init__.py  compat.py  mps.py
conf/: config.yaml
conf/task/: deap_eeg.yaml  lqa.yaml  md17.yaml  sr.yaml
core/: __init__.py  config.py  visualizer.py
core/analysis/: commutator.py  dimension.py  geodesic.py  pipeline.py  sampler.py  signature.py  spectral.py  symmetry.py
core/foundation/: __init__.py  basis.py  layout.py  manifold.py  module.py  validation.py
core/planning/: __init__.py  action.py  flow.py  grade_plan.py  layouts.py  planner.py  policy.py  product.py  request.py  routes.py  translator.py  tree.py  unary.py
core/runtime/: __init__.py  accessors.py  actions.py  algebra.py  context.py  decomposition.py  layers.py  metric.py  multivector.py  projected.py
design_guide/: index.html
docs/: Architecture.md  core-design.md  demo.md  design_guide.md  examples.md  first-guide.md  index.md  quickstart.md  tutorial.md
docs/.vitepress/: config.mts
docs/api/: analysis.md  core.md  criteria.md  functional.md  index.md  layers.md  optimizers.md
docs/benchmarks/: .generated-manifest.json  correctness.md  index.md  layouts.md  performance.md
docs/examples/: products_and_layouts.py  quickstart.py  training_step.py
docs/explanations/: bivector-exponential.md  clifra-and-pytorch.md  clifra-methodology.md  index.md  layout-storage-contracts.md  optimizer-dispatch.md  planning-policy-injection.md  signatures-and-learning.md  transformation-fields.md
docs/framework/: index.md
docs/guide/: criteria.md  layers.md  layouts.md
docs/guides/: algebra-layouts.md  layers-criteria.md  training-loop.md
docs/javascripts/: mathjax.js
docs/reference/: index.md
docs/tutorials/: first-clifford-product.md  index.md  layouts-and-plans.md  learn-geometric-transform.md  unbend-manifold.md
examples/: demo.py
examples/datasets/: amass.py  synthetic.py
examples/tasks/: cgenn.py  clifford_pde.py  gatr.py  hyperbolic.py  manifold.py  sanity_check.py
experiments/: _lib.py  dbg_linear_basis_mixing.py  dbg_lorentz.py  dbg_maxwell_equations.py  dbg_navier_stokes.py  dbg_yang_mills.py  inc_embed_compress.py  inc_lattice_morph.py  inc_pendulum_dynamics.py  inc_sta_trajectory.py
experiments/_gdo/: benchmarks.py  controller.py  harness.py  optimizer.py  parameter_groups.py  pre_exploration.py
experiments/_templates/: inc_template.py
faq/: index.html
functional/: activation.py  loss.py  orthogonality.py
innovations/: index.html
layers/: __init__.py  planning.py
layers/adapters/: conformal.py  embedding.py  gnn.py  mother.py  projective.py
layers/blocks/: attention.py  multi_rotor_ffn.py  transformer.py
layers/primitives/: __init__.py  _utils.py  linear.py  multi_rotor.py  normalization.py  product.py  projection.py  reflection.py  rotor.py  rotor_gadget.py
mathematical/: index.html
milestone/: index.html
models/blocks/: gbn.py  multi_rotor.py  time_series.py
models/deap/: eeg_net.py
models/lqa/: glr_net.py  heads.py
models/md17/: forcenet.py
models/sr/: estimator.py  grouper.py  implicit.py  net.py  translator.py  utils.py
optimizers/: __init__.py  riemannian.py
philosophy/: index.html
research/: __init__.py
research/continuum_solver/: __init__.py  criteria.py  curriculum.py  engine.py  field.py  inputs.py  logging.py  policies.py  sampling.py  types.py
research/slm/: __init__.py  config.py  data.py  eval.py  model.py  train.py
search/: search_index.json
tasks/: base.py  deap_eeg.py  lqa.py  md17.py  symbolic_regression.py
tests/: conftest.py  test_analysis.py  test_attention.py  test_core.py  test_decomposition.py  test_degenerate_algebra.py  test_exp_signatures.py  test_extensions.py  test_framework_pipeline.py  test_functional_products.py  test_geodesic.py  test_grade_plan.py  test_hermitian_metrics.py  test_iterative_unbender.py  test_layer_optimization.py  test_layers.py  test_md17_complete.py  test_metric_search.py  test_multivector.py  test_properties.py  test_riemannian_optimizer.py  test_rotor_gadget.py  test_rotor_translate.py  test_symbolic_regression.py
tests/algebra/: test_basis_invariants.py  test_basis_properties.py  test_exp_properties.py  test_metric_properties.py  test_product_properties.py  test_signed_form_invariants.py  test_unary_properties.py
tests/compilation/: test_planning_compile.py
tests/core/: test_algebra.py  test_attention_scorer.py  test_decomposition.py  test_degenerate.py  test_extensions.py  test_formatting.py  test_functional_products.py  test_import_boundaries.py  test_metrics.py  test_multivector.py  test_properties.py  test_storage.py
tests/functional/: test_functional_product_properties.py
tests/helpers/: __init__.py  bivector_exp_oracle.py  hypothesis_cases.py  small_oracle.py
tests/layers/: test_adapters_properties.py  test_optimization.py  (+5 more)
tutorial/: index.html
(+135 files in other folders)
