[project]
name = "clifra"
version = "1.0.0"
description = "A PyTorch framework for Clifford geometric algebra deep learning"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Eunkyum Kim", email = "nemonanconcode@gmail.com" },
]
keywords = [
    "geometric-algebra",
    "clifford-algebra",
    "deep-learning",
    "pytorch",
    "rotor",
    "multivector",
    "equivariant",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.26.0",
    "hydra-core>=1.3.2",
    "tqdm>=4.67.3",
    "setuptools>=80.10.2",
]

[project.urls]
Homepage = "https://github.com/Concode0/clifra"
Repository = "https://github.com/Concode0/clifra"

[project.optional-dependencies]
sr = [
    "pmlb>=1.0.1.post3",
    "scikit-learn>=1.3.0",
    "sympy>=1.12",
]
md17 = [
    "torch-geometric>=2.6.1",
]
lqa = [
    "sentence-transformers>=5.1.2",
    "datasets>=2.16.0,<4.0",
]
viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
demo = [
    "streamlit>=1.50.0",
    "plotly>=6.5.2",
]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.8.0",
]
all_tasks = [
    "clifra[sr,md17,lqa]",
]
all = [
    "clifra[sr,md17,lqa,viz,demo,dev]",
]

[tool.setuptools.packages.find]
include = ["clifra*"]

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4
extend-exclude = [
    "assets",
    "benchmarks",
    "data",
    "dist",
    "embed_compress",
    "gdo_plots",
    "lattice_morph_plots",
    "linear_basis_mixing_plots",
    "lorentz_plots",
    "maxwell_plots",
    "ns_plots",
    "outputs",
    "pendulum_plots",
    "site",
    "sta_plots",
    "ym_plots",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = [
    "E401",  # Multiple imports on one line appear in compact research/test code.
    "E402",  # Some tests set pytest marks before local imports.
    "E702",  # Existing experiments use compact semicolon-separated statements.
    "E741",  # Single-letter algebra notation is common in math-heavy code.
    "F401",  # Re-export modules and optional imports need a separate cleanup pass.
    "F541",  # Existing display strings sometimes keep f-prefixes for symmetry.
    "F811",  # Local imports intentionally shadow top-level test imports.
    "F841",  # Scratch variables appear in experiments and exploratory tests.
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: long-running tests (deselect with '-m \"not slow\"')",
    "integration: tests requiring external data or network access",
    "unit: fast, self-contained unit tests",
]
