[project]
name = "clifra"
version = "1.1.0"
description = "A PyTorch framework for Clifford geometric algebra deep learning"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Eunkyum Kim", email = "nemonanconcode@gmail.com" },
]
keywords = [
    "geometric-algebra",
    "clifford-algebra",
    "deep-learning",
    "pytorch",
    "rotor",
    "multivector",
    "equivariant",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0.0",
    "setuptools>=80.10.2",
]

[project.urls]
Homepage = "https://github.com/Concode0/clifra"
Repository = "https://github.com/Concode0/clifra"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.8.0",
]
all = [
    "clifra[dev]",
]

[build-system]
requires = ["setuptools>=80.10.2"]
build-backend = "setuptools.build_meta"

[dependency-groups]
docs = [
    "mkdocs<2.0",
    "mkdocs-material>=9.7.4",
    "mkdocstrings[python]>=0.30.1",
    "pymdown-extensions>=10.21",
]
viz = [
    "imageio>=2.37.0",
    "numpy>=2.0.0",
    "vtk>=9.4.0",
]

[tool.setuptools.packages.find]
include = ["clifra*"]

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4
extend-exclude = [
    "assets",
    "benchmarks",
    "data",
    "dist",
    "outputs",
    "site",
    "research"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = [
    "E401",  # Multiple imports on one line appear in compact research/test code.
    "E402",  # Some tests set pytest marks before local imports.
    "E702",  # Compact mathematical scratch code may use semicolon-separated statements.
    "E741",  # Single-letter algebra notation is common in math-heavy code.
    "F401",  # Re-export modules and optional imports need a separate cleanup pass.
    "F541",  # Existing display strings sometimes keep f-prefixes for symmetry.
    "F811",  # Local imports intentionally shadow top-level test imports.
    "F841",  # Scratch variables appear in exploratory tests.
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: long-running tests (deselect with '-m \"not slow\"')",
    "integration: tests requiring external data or network access",
    "unit: fast, self-contained unit tests",
]
